--- a/Notebook/PseudoDataFactory.ipynb
+++ b/Notebook/PseudoDataFactory.ipynb
@@ -317,109 +317,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 657 µs, sys: 924 µs, total: 1.58 ms\n",
-      "Wall time: 1.3 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "total_data_divAp = np.zeros((data.shape[0], 84, 8))\n",
-    "for i in range(data.shape[0]):\n",
-    "    total_data_divAp[i,:,0] = (data[i,:,1]/parameter[i,11])/(data[i,:,4]/data[i,52,4]) # (Li/N_Li)/(C/C_109.5)\n",
-    "    total_data_divAp[i,:,1] = (data[i,:,2]/parameter[i,12])/(data[i,:,4]/data[i,52,4]) # (Be/N_Be)/(C/C_109.5)\n",
-    "    total_data_divAp[i,:,2] = data[i,:,3]/(data[i,:,4]/data[i,52,4]) # B/(C/C_109.5)\n",
-    "\n",
-    "    total_data_divAp[i,:,3] = (data[i,:,1]/parameter[i,11])/(data[i,:,5]/parameter[i,13]) # (Li/N_Li)/(O/N_O)\n",
-    "    total_data_divAp[i,:,4] = (data[i,:,2]/parameter[i,12])/(data[i,:,5]/parameter[i,13]) # (Be/N_Be)/(O/N_O)\n",
-    "    total_data_divAp[i,:,5] = data[i,:,3]/(data[i,:,5]/parameter[i,13]) # B/(O/N_O)\n",
-    "\n",
-    "    total_data_divAp[i,:,6] = data[i,:,4] # C\n",
-    "    total_data_divAp[i,:,7] = (data[i,:,5]/parameter[i,13])/(data[i,:,4]/data[i,52,4])  # (O/N_O)/(C/C_109.5)\n",
-    "    \n",
-    "    if i == 9:\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (223365,84) (9,) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-a499e9bb0ccd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m52\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (223365,84) (9,) "
-     ]
-    }
-   ],
-   "source": [
-    "(data[:,:,4]/data[:9,52,4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "total_data_divAp_new = np.zeros((data.shape[0], 84, 8))\n",
-    "\n",
-    "total_data_divAp[0,:,0] = (data[0,:,1]/np.full(84,parameter[0,11]))/(data[0,:,4]/data[:9,52,4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Thu Aug 05 02:50:03 2021\n",
-      "INFO:root:Experimental data are loading\n",
-      "INFO:root:\u001b[3;33mTime for Search The Pack of Spectrum : 0.1904 min\u001b[0;m\n",
-      "INFO:root:\u001b[3;33mTime for Create Pseudodata : 0.3661 min\u001b[0;m\n",
+      "INFO:root:Thu Aug 05 09:23:39 2021\n",
+      "INFO:root:Experimental data are loading.\n",
+      "INFO:root:=====START=====\n",
+      "INFO:root:\u001b[3;33m Time Cost for this Step : 0.0003 min\u001b[0;m\n",
+      "INFO:root:=====Finish=====\n",
+      "INFO:root:Using whitening data to make pseudodata\n",
+      "INFO:root:=====START=====\n",
+      "INFO:root:\u001b[3;33m Time Cost for this Step : 0.0146 min\u001b[0;m\n",
+      "INFO:root:=====Finish=====\n",
+      "INFO:root:Search The Pack of Spectrum\n",
+      "INFO:root:=====START=====\n",
+      "INFO:root:\u001b[3;33m Time Cost for this Step : 0.0017 min\u001b[0;m\n",
+      "INFO:root:=====Finish=====\n",
+      "INFO:root:Create Pseudodata\n",
+      "INFO:root:=====START=====\n",
+      "INFO:root:\u001b[3;33m Time Cost for this Step : 0.0328 min\u001b[0;m\n",
+      "INFO:root:=====Finish=====\n",
+      "INFO:root:Recorver to (Spectrum)/(Normal Factor)\n",
+      "INFO:root:=====START=====\n",
       "INFO:root:Pseudo Normal Factor\n",
       "INFO:root:        Li     Be     O   \n",
-      "INFO:root:  #     2      2      2   \n",
-      "INFO:root: Max  1.1810 1.0061 1.0239\n",
-      "INFO:root: Min  1.1680 0.9956 1.0159\n",
-      "INFO:root: Ave. 1.1745 1.0009 1.0199\n",
-      "INFO:root:\u001b[3;33mTime for N_Li : 0.0041 min\u001b[0;m\n",
-      "INFO:root:\u001b[3;33mTime for Recorver_Spectrum : 0.0001 min\u001b[0;m\n",
-      "INFO:root:\u001b[3;33mTime for Recorver_Spectrum : 0.0001 min\u001b[0;m\n",
-      "INFO:root:\u001b[3;33mTime consumption : 0.6060 min\u001b[0;m\n"
+      "INFO:root:  #     20     20     20  \n",
+      "INFO:root: Max  1.1873 1.0149 1.0396\n",
+      "INFO:root: Min  1.1526 0.9848 1.0116\n",
+      "INFO:root: Ave. 1.1682 0.9987 1.0266\n",
+      "INFO:root:\u001b[3;33m Time Cost for this Step : 0.0016 min\u001b[0;m\n",
+      "INFO:root:=====Finish=====\n",
+      "INFO:root:Recorver to Spectrum\n",
+      "INFO:root:=====START=====\n",
+      "INFO:root:\u001b[3;33m Time Cost for this Step : 0.0001 min\u001b[0;m\n",
+      "INFO:root:=====Finish=====\n",
+      "INFO:root:\n",
+      "\n",
+      "INFO:root:\u001b[3;33m Total Time consumption : 0.0512 min\u001b[0;m\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 36.1 s, sys: 260 ms, total: 36.4 s\n",
-      "Wall time: 36.4 s\n"
+      "CPU times: user 2.66 s, sys: 463 ms, total: 3.13 s\n",
+      "Wall time: 3.13 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "from script import Create_Pseudodata as Create_Pseudodata\n",
-    "importlib.reload(Create_Pseudodata)\n",
-    "# normalfactor, pseudodata = CPDATA.Create_Pseudodata(para_6_sigma,data_6_sigma,chi,100)\n",
-    "pseudoexp = Create_Pseudodata.Create_Pseudodata(para_6_sigma,data_6_sigma,chi, LOW = 10 , HIGH = 100000 , number = 2, index=0).Create_Pseudodata()\n",
+    "importlib.reload(CR)\n",
+    "pseudoexp = CR.Create_Pseudodata(para_6_sigma,data_6_sigma,chi, LOW = 10 , HIGH = 100000 , number = 20, index=0).Create_Pseudodata()\n",
     "# normalfactor_2, pseudodata_2 = pseudoexp.normalfactor,  pseudoexp.pseudodata"
    ]
   },
