--- a/Notebook/PseudoDataFactory.ipynb
+++ b/Notebook/PseudoDataFactory.ipynb
@@ -54,7 +54,24 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential, load_model\n",
     "print(\"Tensorflow Version is {}\".format(tf.__version__))\n",
-    "print(\"Keras Version is {}\".format(tf.keras.__version__))"
+    "print(\"Keras Version is {}\".format(tf.keras.__version__))\n",
+    "\n",
+    "\n",
+    "# limit GPU memory\n",
+    "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+    "# if gpus:\n",
+    "#   # Restrict TensorFlow to only use the first GPU\n",
+    "try:\n",
+    "    tf.config.experimental.set_visible_devices(gpus[0], 'GPU')\n",
+    "    tf.config.experimental.set_virtual_device_configuration(\n",
+    "    gpus[0],\n",
+    "    [tf.config.experimental.VirtualDeviceConfiguration(memory_limit=1000)])\n",
+    "    logical_gpus = tf.config.experimental.list_logical_devices('GPU')\n",
+    "    print(len(gpus), \"Physical GPUs,\", len(logical_gpus), \"Logical GPU\")\n",
+    "except RuntimeError as e:\n",
+    "# Visible devices must be set before GPUs have been initialized\n",
+    "    print(e)\n",
+    "!nvidia-smi"
    ]
   },
   {
