--- a/Notebook/Demo.ipynb
+++ b/Notebook/Demo.ipynb
@@ -2,18 +2,44 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "growing-induction",
+   "id": "valuable-pointer",
    "metadata": {},
    "source": [
-    "# Import Packages"
+    "# CR ML Road Map\n",
+    "\n",
+    "\n",
+    "- Step 1:\n",
+    "    - TBA\n",
+    "- Step 2:\n",
+    "    - TBA \n",
+    "- Step 3:\n",
+    "    - TBA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "comic-cheat",
+   "metadata": {},
+   "source": [
+    "## Import Packages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "supported-jersey",
+   "execution_count": 2,
+   "id": "legal-domain",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensorflow Version is 2.4.1\n",
+      "Keras Version is 2.4.0\n",
+      "/bin/bash: nvudia-smi: command not found\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import absolute_import, division, print_function, unicode_literals\n",
     "# basic python package\n",
@@ -41,8 +67,158 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential, load_model\n",
     "print(\"Tensorflow Version is {}\".format(tf.__version__))\n",
-    "print(\"Keras Version is {}\".format(tf.keras.__version__))"
+    "print(\"Keras Version is {}\".format(tf.keras.__version__))\n",
+    "!nvudia-smi"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "minor-diagnosis",
+   "metadata": {},
+   "source": [
+    "## Transfrom Mock Data from Text File to Numpy Dataframe \n",
+    "\n",
+    "- Data Description:\n",
+    "\n",
+    "\n",
+    "    - parameter : propagation and source parameters \n",
+    "        numpy shape: (# of mock data, 14)\n",
+    "            #parameter: original parameter \n",
+    "            #new_parameter: recalculate the normal factor and Ap \n",
+    "\n",
+    "            raw1=D_0, \n",
+    "            raw2=\\delta, \n",
+    "            raw3=z_h, \n",
+    "            raw4=v_A, \n",
+    "            raw5=\\eta, \n",
+    "            raw6=A_p, \n",
+    "            raw7=\\nu_1, \n",
+    "            raw8=\\nu_2, \n",
+    "            raw9=log10(R_{br,1}), \n",
+    "            raw10=\\nu_3, \n",
+    "            raw11=log10(R_{br,2}), \n",
+    "            raw12=N_{Li}, \n",
+    "            raw13=N_{Be}, \n",
+    "            raw14=N_{O}\n",
+    "\n",
+    "\n",
+    "    - data: Mock data\n",
+    "        numpy shape: (# of mock data, 84, 6)\n",
+    "            84 means there are 84 energy bins from 1.000e-03 to 1.105e+05\n",
+    "            6 means there are the spectrum for E, Li, Be, B, C, O\n",
+    "            #data_0: original mocak data\n",
+    "            #modify_data_0: reshape data accroding to recalculated parameters\n",
+    "\n",
+    "\n",
+    "     - chi: chi-square \n",
+    "        numpy shape: (# of mock data)\n",
+    "            #new_chi: chi-square from \"modify_data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "elegant-ceiling",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Thu Aug 05 14:41:34 2021\n",
+      "INFO:root:Now loading...\n",
+      "INFO:root:Total data: 52836\n",
+      "INFO:root:\u001b[3;33mTime consumption : 0.7570 min\u001b[0;m\n",
+      "INFO:root:Data Shape for 'parameter': (52836, 14)\n",
+      "INFO:root:Data Shape for 'data': (4438224, 11)\n",
+      "INFO:root:Data Shape for 'chisq': (52836,)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 44.7 s, sys: 1.47 s, total: 46.1 s\n",
+      "Wall time: 46.1 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "text_Data_path = \"../Data/Text_Mock_data/\"\n",
+    "\n",
+    "mockdata_1 = CR.Mock_Data_to_NumpyArray(text_Data_path + \"res_3x_1.txt\")\n",
+    "parameter, data, chisq = mockdata_1.parameter, mockdata_1.spectrum, mockdata_1.chisq\n",
+    "\n",
+    "logging.info(\"Data Shape for 'parameter': {}\".format(parameter.shape))\n",
+    "logging.info(\"Data Shape for 'data': {}\".format(data.shape))\n",
+    "logging.info(\"Data Shape for 'chisq': {}\".format(chisq.shape))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "premium-facial",
+   "metadata": {},
+   "source": [
+    "## ReCalculate Normalilzed Factor for Mock Data\n",
+    "\n",
+    "- 1: Using \n",
+    "    ```\n",
+    "    CR.Mock_Data_Rescale(parameter, parameter, data)\n",
+    "    ```\n",
+    "    to split 'data' into Li, Be, B, C and O `spectra`.  \n",
+    "    Note that we put the same 'parameter' here because we have not get new normalilzed factor yet\n",
+    "    \n",
+    "    - `spectra`: Mock data\n",
+    "        numpy shape: (# of mock data, 84, 6)\n",
+    "            84 means there are 84 energy bins from 1.000e-03 to 1.105e+05\n",
+    "            6 means there are the spectrum for E, Li, Be, B, C, O\n",
+    "            #data_0: original mocak data\n",
+    "            #modify_data_0: reshape data accroding to recalculated paramete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "turned-nicaragua",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Data Shape for 'spectra_data': (52836, 84, 6)\n",
+      "INFO:root:There are 52836 mock data.\n",
+      "INFO:root:For each mock data, there are 84 energy bins.\n",
+      "INFO:root:6 corresponding to E, Li, Be, B, C and O.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 338 ms, sys: 17.8 ms, total: 356 ms\n",
+      "Wall time: 356 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "spectra_data = CR.Mock_Data_Rescale(parameter, parameter, data)\n",
+    "spectra_data = spectra_data.data\n",
+    "logging.info(\"Data Shape for 'spectra_data': {}\".format(spectra_data.shape))\n",
+    "logging.info(\"There are {} mock data.\".format(spectra_data.shape[0]))\n",
+    "logging.info(\"For each mock data, there are {} energy bins.\".format(spectra_data.shape[1]))\n",
+    "logging.info(\"{} corresponding to E, Li, Be, B, C and O.\".format(spectra_data.shape[2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "classified-ecology",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
