--- a/Notebook/Demo.ipynb
+++ b/Notebook/Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "grateful-empire",
+   "id": "falling-referral",
    "metadata": {},
    "source": [
     "# CR ML Road Map\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aquatic-somerset",
+   "id": "intimate-makeup",
    "metadata": {},
    "source": [
     "## Import Packages"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "directed-castle",
+   "id": "mental-depth",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "occupational-october",
+   "id": "resident-trailer",
    "metadata": {},
    "source": [
     "## Transfrom Mock Data from Text File to Numpy Dataframe \n",
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "constitutional-third",
+   "id": "otherwise-credit",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "capable-designation",
+   "id": "continent-official",
    "metadata": {},
    "source": [
     "## ReCalculate Normalized Factor for Mock Data\n",
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "introductory-island",
+   "id": "hundred-transcript",
    "metadata": {},
    "outputs": [
     {
@@ -214,29 +214,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "modern-filing",
+   "execution_count": 93,
+   "id": "marked-waters",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Thu Aug 05 17:30:49 2021\n",
+      "INFO:root:Thu Aug 05 17:42:08 2021\n",
       "INFO:root:Finding best Ap\n",
       "INFO:root:=====START=====\n",
-      "100%|██████████| 100/100 [00:00<00:00, 105.61it/s]\n",
-      "INFO:root:\u001b[3;33m Time Cost for this Step : 0.0158 min\u001b[0;m\n",
+      "100%|██████████| 100/100 [00:00<00:00, 103.38it/s]\n",
+      "INFO:root:\u001b[3;33m Time Cost for this Step : 0.0162 min\u001b[0;m\n",
       "INFO:root:=====Finish=====\n",
-      "INFO:root:\u001b[3;33mTime Cost : 0.0160 min\u001b[0;m\n"
+      "INFO:root:\u001b[3;33mTime Cost : 0.0163 min\u001b[0;m\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 984 ms, sys: 4 ms, total: 988 ms\n",
-      "Wall time: 987 ms\n"
+      "CPU times: user 983 ms, sys: 8.05 ms, total: 991 ms\n",
+      "Wall time: 986 ms\n"
      ]
     }
    ],
@@ -249,29 +249,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "enormous-profit",
+   "execution_count": 95,
+   "id": "active-queue",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Thu Aug 05 17:30:51 2021\n",
+      "INFO:root:Thu Aug 05 17:42:21 2021\n",
       "INFO:root:Finding New Normalized Factor\n",
       "INFO:root:=====START=====\n",
-      "100%|██████████| 100/100 [00:01<00:00, 84.40it/s]\n",
-      "INFO:root:\u001b[3;33m Time Cost for this Step : 0.0198 min\u001b[0;m\n",
+      "100%|██████████| 100/100 [00:01<00:00, 80.77it/s]\n",
+      "INFO:root:\u001b[3;33m Time Cost for this Step : 0.0207 min\u001b[0;m\n",
       "INFO:root:=====Finish=====\n",
-      "INFO:root:\u001b[3;33mTime Cost : 0.0199 min\u001b[0;m\n"
+      "INFO:root:\u001b[3;33mTime Cost : 0.0208 min\u001b[0;m\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.2 s, sys: 6.94 ms, total: 1.2 s\n",
-      "Wall time: 1.2 s\n"
+      "CPU times: user 1.25 s, sys: 6.05 ms, total: 1.26 s\n",
+      "Wall time: 1.26 s\n"
      ]
     }
    ],
@@ -284,8 +284,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "id": "affecting-pharmaceutical",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Thu Aug 05 17:42:25 2021\n",
+      "INFO:root:\u001b[3;33mTime Cost : 0.0000 min\u001b[0;m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.91 ms, sys: 1 µs, total: 2.91 ms\n",
+      "Wall time: 2.21 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "new_parameter = CR.New_Parameter(spectra_data.new_parameter[:100],new_normalized_factor.new_factor,ap_5=new_Ap.ap_5).new_parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "korean-antibody",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.84 ms, sys: 27 µs, total: 1.87 ms\n",
+      "Wall time: 1.3 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "new_spectra_data = CR.Mock_Data_Rescale(parameter[:100], new_parameter, spectra_data.data[:100],usedata = True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# para_1_sigma, data_1_sigma =  Select_Sample(mock_0.new_parameter,mock_0.data,chi_0,1).Sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "concerned-district",
+   "id": "theoretical-decade",
    "metadata": {},
    "outputs": [],
    "source": []
