update Demo & CR_ML_Class

--- a/Notebook/Demo.ipynb
+++ b/Notebook/Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "falling-referral",
+   "id": "undefined-retrieval",
    "metadata": {},
    "source": [
     "# CR ML Road Map\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intimate-makeup",
+   "id": "seven-apparel",
    "metadata": {},
    "source": [
     "## Import Packages"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "mental-depth",
+   "id": "desperate-tuition",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "resident-trailer",
+   "id": "sharp-masters",
    "metadata": {},
    "source": [
     "## Transfrom Mock Data from Text File to Numpy Dataframe \n",
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "otherwise-credit",
+   "id": "suburban-interim",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continent-official",
+   "id": "vital-latest",
    "metadata": {},
    "source": [
     "## ReCalculate Normalized Factor for Mock Data\n",
@@ -180,8 +180,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "hundred-transcript",
+   "execution_count": 111,
+   "id": "continued-athletics",
    "metadata": {},
    "outputs": [
     {
@@ -198,14 +198,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 191 ms, sys: 38.9 ms, total: 230 ms\n",
-      "Wall time: 228 ms\n"
+      "CPU times: user 169 ms, sys: 79.1 ms, total: 248 ms\n",
+      "Wall time: 248 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "spectra_data = CR.Mock_Data_Rescale(parameter, parameter, data)\n",
+    "spectra_data = CR.Mock_Data_Rescale(origin_parameter=parameter, new_parameter=parameter, spectrum=data, usedata=False)\n",
     "logging.info(\"Data Shape for 'spectra_data': {}\".format(spectra_data.data.shape))\n",
     "logging.info(\"There are {} mock data.\".format(spectra_data.data.shape[0]))\n",
     "logging.info(\"For each mock data, there are {} energy bins.\".format(spectra_data.data.shape[1]))\n",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "marked-waters",
+   "id": "forward-warrant",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "active-queue",
+   "id": "defined-visit",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "affecting-pharmaceutical",
+   "id": "convertible-check",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "korean-antibody",
+   "id": "vanilla-guard",
    "metadata": {},
    "outputs": [
     {
@@ -336,8 +336,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 118,
+   "id": "impressed-favor",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function spectrum_ratio in module script.CR_ML_Class:\n",
+      "\n",
+      "spectrum_ratio(self, mock=True)\n",
+      "    Usage: \n",
+      "        Mock_Data_Processing(parameter, E, Li, Be, B, C, O, data, usedata = False).spectrum_ratio(mock = True)\n",
+      "    Return:\n",
+      "        Null\n",
+      "    Item:\n",
+      "        self.total_data_in_ratio\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "importlib.reload(CR)\n",
+    "\n",
+    "help(CR.Mock_Data_Processing.spectrum_ratio)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "theoretical-decade",
+   "id": "occasional-morgan",
    "metadata": {},
    "outputs": [],
    "source": []
